--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -27,7 +27,6 @@ p {
 }
 .row {
   width: 100%;
-  text-align: right;
 }
 .chick{
  border: 1px solid black ;
@@ -65,53 +64,26 @@ p {
 
 }
 #content{
-    padding: 6px;
+    padding: 6px 8px 6px 8px ;
     text-align: left;
     margin-bottom: 1px;
   font-size: 100%;
   position: relative;
-    top: 25px;
+    top: 26px;
   float:left ;
 
 }
 
 /********** in the desktop **********/
 @media (min-width: 992px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+  .col-lg-4, .col-lg-6, .col-lg-12 {
     float: left;
-  }
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
   }
   .col-lg-4 {
     width: 33.33%;
   }
-  .col-lg-5 {
-    width: 41.66%;
-  }
   .col-lg-6 {
     width: 50%;
-  }
-  .col-lg-7 {
-    width: 58.33%;
-  }
-  .col-lg-8 {
-    width: 66.66%;
-  }
-  .col-lg-9 {
-    width: 74.99%;
-  }
-  .col-lg-10 {
-    width: 83.33%;
-  }
-  .col-lg-11 {
-    width: 91.66%;
   }
   .col-lg-12 {
     width: 100%;
@@ -120,84 +92,25 @@ p {
 
 /********** in the tablet **********/
 @media (min-width: 768px) and (max-width: 991px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+  .col-md-4, .col-md-6,  .col-md-12 {
     float: left;
-  }
-  .col-md-1 {
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
   }
   .col-md-4 {
     width: 33.33%;
   }
-  .col-md-5 {
-    width: 41.66%;
-  }
   .col-md-6 {
     width: 50%;
-  }
-  .col-md-7 {
-    width: 58.33%;
-  }
-  .col-md-8 {
-    width: 66.66%;
-  }
-  .col-md-9 {
-    width: 74.99%;
-  }
-  .col-md-10 {
-    width: 83.33%;
-  }
-  .col-md-11 {
-    width: 91.66%;
   }
   .col-md-12 {
     width: 100%;
   }
 }
+
 /********** in the mobile *********/
 @media (max-width: 767px) {
-  .col-ms-1, .col-ms-2, .col-ms-3, .col-ms-4, .col-ms-5, .col-ms-6, .col-ms-7, .col-ms-8, .col-ms-9, .col-ms-10, .col-ms-11, .col-ms-12 {
+ .col-ms-12 {
     float: left;
     }
-  .col-ms-1 {
-    width: 8.33%;
-  }
-  .col-ms-2 {
-    width: 16.66%;
-  }
-  .col-ms-3 {
-    width: 25%;
-  }
-  .col-ms-4 {
-    width: 33.33%;
-  }
-  .col-ms-5 {
-    width: 41.66%;
-  }
-  .col-ms-6 {
-    width: 50%;
-  }
-  .col-ms-7 {
-    width: 58.33%;
-  }
-  .col-ms-8 {
-    width: 66.66%;
-  }
-  .col-ms-9 {
-    width: 74.99%;
-  }
-  .col-ms-10 {
-    width: 83.33%;
-  }
-  .col-ms-11 {{  }
-    width: 91.66%;
-  }
   .col-ms-12 {
     width: 100%;
    }
