resulta de devoir.

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -26,7 +26,6 @@
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
             <li>
-               <a href="menu-categories.html">
                 <br class="hidden-xs"> chicken</a>
             </li>
             <li>
@@ -49,7 +48,7 @@
         <div id="home-tiles" class="row">
          <div class="col-md-4 col-sm-6 col-xs-12">
            <div id="chicken-tile"><span>Chicken</span>
-            <p>Nulla vestibulum sapien congue ullamcorper luctus. Fusce sem nibh, malesuada at orci et, aliquam convallis sem. Quisque vel sollicitudin arcu. Praesent sagittis maximus ante sed placerat. Pellentesque convallis vulputate eros id ullamcorper. Duis nec tortor hendrerit, mattis lectus vitae, mollis sem. Vestibulum ornare orci sit amet diam vestibulum hendrerit. Aenean augue felis, bibendum sed velit ut, sodales auctor libero. In porta euismod scelerisque. Fusce ornare nibh a ligula pretium, vel ultrices diam ornare. Curabitur consectetur feugiat pellentesque.
+            <p>Nulla vestibulum sapien congue ullamcorper luctus. Fusce sem nibh, malesuada at orci et, aliquam convallis sem. Quisque vel sollicitudin arcu. Praesent sagittis maximus ante sed placerat. Pellentesque convallis vulputate eros id ullamcorper. Duis nec tortor hendrerit, mattis lectus vitae, mollis sem. Vestibulum ornare orci sit amet diam vestibulum hendrerit. Aenean augue felis, bibendum sed velit ut, sodales auctor libero. In porta euismod scelerisque. 
               <a href="index.html" class="visible-xs" >BACK TO TOP</a></p>
            </div>
             </div>
