--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -46,21 +46,21 @@
         <div id="home-tiles" class="row">
          <div class="col-md-4 col-sm-6 col-xs-12">
            <div id="chicken-tile"><span>Chicken</span>
-            <p>Nulla vestibulum sapien congue ullamcorper luctus. Fusce sem nibh, malesuada at orci et, aliquam convallis sem. Quisque vel sollicitudin arcu. Praesent sagittis maximus ante sed placerat. Pellentesque convallis vulputate eros id ullamcorper. Duis nec tortor hendrerit, mattis lectus vitae, mollis sem. Vestibulum ornare orci sit amet diam vestibulum hendrerit. Aenean augue felis, bibendum sed velit ut, sodales auctor libero. In porta euismod scelerisque. 
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras pretium sem rhoncus pulvinar lobortis. Vivamus a malesuada justo. Cras urna mi, laoreet et tellus laoreet, vehicula commodo velit. Proin id dapibus nisi. Nunc tristique felis mauris, nec cursus ante luctus nec. In fringilla dui laoreet, lacinia sem vel, dictum dolor. Donec id sapien et odio fermentum egestas scelerisque non dolor. Integer consectetur, dui in convallis facilisis, ipsum nisl cursus purus,
               <a href="index.html" class="visible-xs" >BACK TO TOP</a></p>
            </div>
             </div>
           <div class="col-md-4 col-sm-6 col-xs-12">
            <div id="beef-tile"><span>Beef</span>
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras pretium sem rhoncus pulvinar lobortis. Vivamus a malesuada justo. Cras urna mi, laoreet et tellus laoreet, vehicula commodo velit. Proin id dapibus nisi. Nunc tristique felis mauris, nec cursus ante luctus nec. In fringilla dui laoreet, lacinia sem vel, dictum dolor. Donec id sapien et odio fermentum egestas scelerisque non dolor. Integer consectetur, dui in convallis facilisis, ipsum nisl cursus purus, eget accumsan tortor ligula id metus. In congue blandit facilisis. Vivamus semper, dui et dictum cursus, ligula lorem dapibus est, eget molestie enim lectus et felis. Nulla metus felis, fringilla sit amet luctus ac, lobortis quis dolor. Suspendisse porttitor faucibus eros id finibus. Nam neque sem, placerat et tincidunt at, finibus id arcu. Donec suscipit blandit magna ac aliquet. Suspendisse pellentesque rutrum purus, a pellentesque elit tincidunt vitae. Quisque sodales purus in dui sollicitudin, quis placerat nulla rutrum.</p>
+           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras pretium sem rhoncus pulvinar lobortis. Vivamus a malesuada justo. Cras urna mi, laoreet et tellus laoreet, vehicula commodo velit. Proin id dapibus nisi. Nunc tristique felis mauris, nec cursus ante luctus nec. In fringilla dui laoreet, lacinia sem vel, dictum dolor. Donec id sapien et odio fermentum egestas scelerisque non dolor. Integer consectetur, dui in convallis facilisis, ipsum nisl cursus purus,</p>
             </div>
            </div>
         <div class="col-md-4 col-sm-12 col-xs-12">
          <div id="sushi-tile"><span>Sushi</span>
-           <p>Sed et odio vestibulum, pellentesque mi et, viverra erat. Vestibulum varius lorem sed quam porta sagittis. Proin a sollicitudin mauris. Sed non lorem vel leo euismod accumsan egestas at massa. Sed condimentum sollicitudin turpis. Donec ultricies sit amet ipsum ac vulputate. Praesent viverra malesuada magna, at tincidunt mauris vulputate eu. Duis cursus varius elit. Suspendisse laoreet, velit a congue fringilla, lacus sapien dignissim velit, sit amet dapibus ex enim ut risus. Suspendisse ex dolor, venenatis id nibh sed, accumsan vehicula risus. Praesent varius justo vel tempor lacinia. Nulla vulputate, massa feugiat pellentesque placerat, mi justo vulputate metus, a rutrum erat ante ut tortor.</p>
+           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras pretium sem rhoncus pulvinar lobortis. Vivamus a malesuada justo. Cras urna mi, laoreet et tellus laoreet, vehicula commodo velit. Proin id dapibus nisi. Nunc tristique felis mauris, nec cursus ante luctus nec. In fringilla dui laoreet, lacinia sem vel, dictum dolor. Donec id sapien et odio fermentum egestas scelerisque non dolor. Integer consectetur, dui in convallis facilisis, ipsum nisl cursus purus,</p>
+          </div>
          </div>
-          </div>
-          </div>
+        </div>
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-1.11.3.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
