--- a/elzero-template/template02/index.html
+++ b/elzero-template/template02/index.html
@@ -222,7 +222,7 @@
     <div class="text">
       <h2> super awesome video here</h2>
       <p>Its All you need</p>
-      <button>see more</button>
+      <button>SEE MORE</button>
     </div>
    </div>
    <!-- end video -->
